--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-ga": "^3.3.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^7.0.1",
     "react-responsive": "^9.0.0-beta.4",
