--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.22.0",
     "date-fns": "^2.25.0",
     "disqus-react": "^1.1.2",
+    "feed": "^4.2.2",
     "framer-motion": "^4.1.17",
     "next": "11.1.2",
     "react": "17.0.2",
