--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/overpass-mono": "^4.5.0",
     "@fontsource/poppins": "^4.5.0",
+    "@fontsource/pt-sans": "^4.5.0",
     "axios": "^0.22.0",
     "date-fns": "^2.25.0",
     "disqus-react": "^1.1.2",
@@ -34,7 +35,8 @@
     "remark-gfm": "^3.0.0",
     "sass": "^1.42.1",
     "slugify": "^1.6.1",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "use-debounce": "^7.0.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
