--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "disqus-react": "^1.1.2",
     "feed": "^4.2.2",
     "framer-motion": "^4.1.17",
+    "moment": "^2.29.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
