--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "disqus-react": "^1.1.2",
     "feed": "^4.2.2",
     "framer-motion": "^4.1.17",
+    "gray-matter": "^4.0.3",
+    "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "next": "11.1.2",
     "react": "17.0.2",
