--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@fontsource/catamaran": "^4.5.3",
-    "@fontsource/montserrat": "^4.5.5",
-    "@fontsource/overpass-mono": "^4.5.0",
-    "@fontsource/poppins": "^4.5.0",
-    "@fontsource/pt-sans": "^4.5.0",
+    "@fontsource/fira-mono": "^4.5.6",
+    "@fontsource/fira-sans": "^4.5.6",
     "axios": "^0.22.0",
     "date-fns": "^2.25.0",
     "disqus-react": "^1.1.2",
