--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/fira-mono": "^4.5.6",
     "@fontsource/fira-sans": "^4.5.6",
+    "@fontsource/pt-sans": "^4.5.5",
     "axios": "^0.22.0",
     "date-fns": "^2.25.0",
     "disqus-react": "^1.1.2",
