--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
+    "react-ga4": "^1.4.1",
     "react-icons": "^4.3.1",
     "react-markdown": "^7.0.1",
     "react-responsive": "^9.0.0-beta.4",
