--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
     "next": "11.1.2",
+    "promise": "^8.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0",
