reworked the cookie policy logic

--- a/package.json
+++ b/package.json
@@ -29,19 +29,18 @@
     "promise": "^8.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-error-boundary": "^3.1.4",
     "react-ga": "^3.3.0",
     "react-ga4": "^1.4.1",
     "react-icons": "^4.3.1",
     "react-markdown": "^7.0.1",
-    "react-responsive": "^9.0.0-beta.4",
     "react-reveal": "^1.2.2",
     "react-syntax-highlighter": "^15.4.4",
     "reading-time": "^1.5.0",
     "rehype-raw": "^6.1.0",
     "remark-gfm": "^3.0.0",
     "sass": "^1.42.1",
-    "slugify": "^1.6.1",
-    "swr": "^1.0.1",
+    "slugify": "^1.6.5",
     "use-debounce": "^7.0.1"
   },
   "devDependencies": {
