--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,5 +1,5 @@
 {
-    "extends": ["@commitlint/config-conventional"],
+    "extends": ["gitmoji"],
     "rules": {
         "type-enum": [
             2,
