--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/fira-mono": "^4.5.6",
-    "@fontsource/fira-sans": "^4.5.6",
-    "@fontsource/pt-sans": "^4.5.5",
+    "@fontsource/hauora-sans": "^4.5.3",
     "axios": "^0.22.0",
     "date-fns": "^2.25.0",
     "disqus-react": "^1.1.2",
@@ -50,6 +49,8 @@
     "use-debounce": "^7.0.1"
   },
   "devDependencies": {
+    "commitlint": "^11.0.0",
+    "commitlint-config-gitmoji": "^2.2.5",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "standard-version": "^9.5.0"
