:lipstick: style: ui tweaks, new font and image optimizations

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@fontsource/fira-mono": "^4.5.6",
-    "@fontsource/hauora-sans": "^4.5.3",
+    "@fontsource/roboto": "^4.5.8",
+    "@fontsource/roboto-mono": "^4.5.8",
+    "@fontsource/roboto-serif": "^4.5.7",
     "axios": "^0.22.0",
     "date-fns": "^2.25.0",
     "disqus-react": "^1.1.2",
