:zap: perf: custom image with next image for optimization

--- a/package.json
+++ b/package.json
@@ -13,48 +13,51 @@
     "release:major": "standard-version --release-as major"
   },
   "dependencies": {
-    "@badrap/bar-of-progress": "^0.1.2",
-    "@chakra-ui/react": "^1.6.8",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@badrap/bar-of-progress": "^0.2.2",
+    "@chakra-ui/react": "^2.3.6",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@fontsource/inter": "^4.5.14",
     "@fontsource/roboto": "^4.5.8",
     "@fontsource/roboto-mono": "^4.5.8",
-    "@fontsource/roboto-serif": "^4.5.7",
-    "axios": "^0.22.0",
-    "date-fns": "^2.25.0",
-    "disqus-react": "^1.1.2",
+    "@fontsource/roboto-serif": "^4.5.10",
+    "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
+    "disqus-react": "^1.1.5",
     "feed": "^4.2.2",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^7.6.1",
     "ga-4-react": "^0.1.281",
     "gray-matter": "^4.0.3",
     "husky": "^8.0.1",
     "js-cookie": "^3.0.1",
-    "moment": "^2.29.1",
-    "next": "11.1.2",
-    "next-seo": "^5.5.0",
-    "promise": "^8.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "moment": "^2.29.4",
+    "next": "12.3.1",
+    "next-seo": "^5.8.0",
+    "plaiceholder": "^2.5.0",
+    "promise": "^8.2.0",
+    "react": "18.2.0",
+    "react-cool-dimensions": "^2.0.7",
+    "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
-    "react-ga": "^3.3.0",
+    "react-ga": "^3.3.1",
     "react-ga4": "^1.4.1",
-    "react-icons": "^4.3.1",
-    "react-markdown": "^7.0.1",
-    "react-syntax-highlighter": "^15.4.4",
+    "react-icons": "^4.6.0",
+    "react-markdown": "^8.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "reading-time": "^1.5.0",
-    "rehype-raw": "^6.1.0",
-    "remark-gfm": "^3.0.0",
-    "sass": "^1.42.1",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
+    "sass": "^1.55.0",
     "slugify": "^1.6.5",
-    "use-debounce": "^7.0.1"
+    "use-debounce": "^8.0.4"
   },
   "devDependencies": {
-    "commitlint": "^11.0.0",
-    "commitlint-config-gitmoji": "^2.2.5",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "commitlint": "^17.1.2",
+    "commitlint-config-gitmoji": "^2.2.6",
+    "eslint": "8.25.0",
+    "eslint-config-next": "12.3.1",
     "standard-version": "^9.5.0"
   }
 }
