--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@fontsource/roboto-mono": "^5.0.8",
     "@fontsource/roboto-serif": "^5.0.8",
     "axios": "^1.5.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "disqus-react": "^1.1.5",
     "feed": "^4.2.2",
@@ -31,9 +33,11 @@
     "gray-matter": "^4.0.3",
     "husky": "^8.0.3",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.279.0",
     "moment": "^2.29.4",
     "next": "13.4.19",
     "next-seo": "^6.1.0",
+    "next-themes": "^0.2.1",
     "plaiceholder": "^3.0.0",
     "promise": "^8.3.0",
     "react": "18.2.0",
@@ -50,6 +54,8 @@
     "remark-gfm": "^4.0.0",
     "sass": "^1.67.0",
     "slugify": "^1.6.6",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
@@ -61,12 +67,15 @@
     "@storybook/nextjs": "^7.4.2",
     "@storybook/react": "^7.4.2",
     "@storybook/testing-library": "^0.2.1",
+    "autoprefixer": "^10.4.15",
     "commitlint": "^17.7.1",
     "commitlint-config-gitmoji": "^2.3.1",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "eslint-plugin-storybook": "^0.6.13",
+    "postcss": "^8.4.30",
     "standard-version": "^9.5.0",
-    "storybook": "^7.4.2"
+    "storybook": "^7.4.2",
+    "tailwindcss": "^3.3.3"
   }
 }
