--- a/package.json
+++ b/package.json
@@ -3,81 +3,83 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev\"",
+    "build": "tinacms build && next build",
     "start": "next start",
-    "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
-    "@chakra-ui/react": "^2.8.1",
-    "@chakra-ui/theme-tools": "^2.1.1",
-    "@commitlint/cli": "^17.7.1",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@emotion/react": "^11.11.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/theme-tools": "^2.1.2",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@fontsource/inter": "^5.0.8",
+    "@fontsource/inter": "^5.0.16",
     "@fontsource/roboto": "^5.0.8",
-    "@fontsource/roboto-mono": "^5.0.8",
+    "@fontsource/roboto-mono": "^5.0.16",
     "@fontsource/roboto-serif": "^5.0.8",
+    "@portabletext/react": "^3.0.11",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
-    "axios": "^1.5.0",
+    "@sanity/asset-utils": "^1.3.0",
+    "@sanity/code-input": "^4.1.2",
+    "@sanity/icons": "^2.10.2",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/ui": "^2.0.3",
+    "@sanity/vision": "3",
+    "@types/react": "^18.2.56",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "date-fns": "^2.30.0",
+    "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "disqus-react": "^1.1.5",
     "feed": "^4.2.2",
-    "framer-motion": "^10.16.4",
+    "framer-motion": "^11.0.5",
     "ga-4-react": "^0.1.281",
     "gray-matter": "^4.0.3",
-    "husky": "^8.0.3",
+    "husky": "^9.0.11",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.279.0",
-    "moment": "^2.29.4",
-    "next": "13.4.19",
-    "next-seo": "^6.1.0",
+    "lucide-react": "^0.331.0",
+    "moment": "^2.30.1",
+    "next": "14.1.0",
+    "next-sanity": "^8.0.0",
+    "next-seo": "^6.5.0",
     "next-themes": "^0.2.1",
+    "novel": "^0.2.4",
     "plaiceholder": "^3.0.0",
     "promise": "^8.3.0",
     "react": "18.2.0",
     "react-cool-dimensions": "^3.0.1",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^4.0.11",
+    "react-error-boundary": "^4.0.12",
     "react-ga": "^3.3.1",
     "react-ga4": "^2.1.0",
-    "react-icons": "^4.11.0",
-    "react-markdown": "^8.0.7",
+    "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "reading-time": "^1.5.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "sass": "^1.67.0",
+    "sanity": "^3.29.1",
+    "sass": "^1.71.0",
     "slugify": "^1.6.6",
-    "tailwind-merge": "^1.14.0",
+    "styled-components": "6",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^9.0.4"
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.4.2",
-    "@storybook/addon-interactions": "^7.4.2",
-    "@storybook/addon-links": "^7.4.2",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/blocks": "^7.4.2",
-    "@storybook/nextjs": "^7.4.2",
-    "@storybook/react": "^7.4.2",
-    "@storybook/testing-library": "^0.2.1",
-    "autoprefixer": "^10.4.15",
-    "commitlint": "^17.7.1",
-    "commitlint-config-gitmoji": "^2.3.1",
-    "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
-    "eslint-plugin-storybook": "^0.6.13",
-    "postcss": "^8.4.30",
+    "@types/node": "^20.11.19",
+    "autoprefixer": "^10.4.17",
+    "commitlint": "^18.6.1",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
     "standard-version": "^9.5.0",
-    "storybook": "^7.4.2",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.4.1"
   }
 }
