--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "TINA_PUBLIC_IS_LOCAL=true tinacms dev -c \"next dev\"",
-    "build": "tinacms build && next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,12 +16,15 @@
     "@commitlint/config-conventional": "^18.6.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/lora": "^5.0.17",
     "@fontsource/inter": "^5.0.16",
     "@fontsource/roboto": "^5.0.8",
     "@fontsource/roboto-mono": "^5.0.16",
     "@fontsource/roboto-serif": "^5.0.8",
+    "@huggingface/inference": "^2.6.6",
     "@portabletext/react": "^3.0.11",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
@@ -29,9 +32,14 @@
     "@sanity/code-input": "^4.1.2",
     "@sanity/icons": "^2.10.2",
     "@sanity/image-url": "^1.0.2",
+    "@sanity/table": "^1.1.2",
     "@sanity/ui": "^2.0.3",
     "@sanity/vision": "3",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/typography": "^0.5.12",
     "@types/react": "^18.2.56",
+    "@types/speakingurl": "^13.0.6",
+    "ai": "^3.0.15",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -60,6 +68,7 @@
     "react-ga4": "^2.1.0",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
+    "react-player": "^2.15.1",
     "react-syntax-highlighter": "^15.5.0",
     "reading-time": "^1.5.0",
     "rehype-raw": "^7.0.0",
@@ -67,6 +76,7 @@
     "sanity": "^3.29.1",
     "sass": "^1.71.0",
     "slugify": "^1.6.6",
+    "speakingurl": "^14.0.1",
     "styled-components": "6",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
@@ -74,6 +84,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "autoprefixer": "^10.4.17",
     "commitlint": "^18.6.1",
     "eslint": "8.56.0",
