--- a/package.json
+++ b/package.json
@@ -10,87 +10,83 @@
   },
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
-    "@chakra-ui/react": "^2.8.2",
-    "@chakra-ui/theme-tools": "^2.1.2",
-    "@commitlint/cli": "^18.6.1",
-    "@commitlint/config-conventional": "^18.6.2",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/archivo": "^5.0.18",
+    "@fontsource-variable/bricolage-grotesque": "^5.0.5",
     "@fontsource-variable/lora": "^5.0.17",
-    "@fontsource/inter": "^5.0.16",
-    "@fontsource/roboto": "^5.0.8",
-    "@fontsource/roboto-mono": "^5.0.16",
-    "@fontsource/roboto-serif": "^5.0.8",
+    "@fontsource/inter": "^5.0.17",
     "@huggingface/inference": "^2.6.6",
-    "@portabletext/react": "^3.0.11",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
+    "@portabletext/react": "^3.0.17",
+    "@prisma/client": "5.12.1",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-hover-card": "^1.0.7",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toggle": "^1.0.3",
     "@sanity/asset-utils": "^1.3.0",
-    "@sanity/code-input": "^4.1.2",
-    "@sanity/icons": "^2.10.2",
+    "@sanity/code-input": "^4.1.3",
+    "@sanity/icons": "^2.11.7",
     "@sanity/image-url": "^1.0.2",
     "@sanity/table": "^1.1.2",
-    "@sanity/ui": "^2.0.3",
+    "@sanity/ui": "^2.0.16",
     "@sanity/vision": "3",
+    "@t3-oss/env-nextjs": "^0.9.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.12",
-    "@types/react": "^18.2.56",
+    "@types/react": "^18.2.74",
     "@types/speakingurl": "^13.0.6",
-    "ai": "^3.0.15",
-    "axios": "^1.6.7",
+    "ai": "^3.0.19",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "date-fns": "^3.3.1",
-    "disqus-react": "^1.1.5",
-    "feed": "^4.2.2",
-    "framer-motion": "^11.0.5",
-    "ga-4-react": "^0.1.281",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.0.25",
     "gray-matter": "^4.0.3",
+    "hamburger-react": "^2.5.0",
     "husky": "^9.0.11",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.331.0",
-    "moment": "^2.30.1",
-    "next": "14.1.0",
-    "next-sanity": "^8.0.0",
+    "lucide-react": "^0.365.0",
+    "next": "14.1.4",
+    "next-sanity": "^8.5.3",
     "next-seo": "^6.5.0",
-    "next-themes": "^0.2.1",
-    "novel": "^0.2.4",
+    "next-themes": "^0.3.0",
     "plaiceholder": "^3.0.0",
+    "prisma": "^5.12.1",
     "promise": "^8.3.0",
     "react": "18.2.0",
     "react-cool-dimensions": "^3.0.1",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^4.0.12",
-    "react-ga": "^3.3.1",
-    "react-ga4": "^2.1.0",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "^5.0.1",
     "react-markdown": "^9.0.1",
     "react-player": "^2.15.1",
     "react-syntax-highlighter": "^15.5.0",
-    "reading-time": "^1.5.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
-    "sanity": "^3.29.1",
-    "sass": "^1.71.0",
+    "sanity": "^3.36.4",
+    "sass": "^1.74.1",
     "slugify": "^1.6.6",
     "speakingurl": "^14.0.1",
     "styled-components": "6",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.19",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.19",
+    "@types/node": "^20.12.5",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "autoprefixer": "^10.4.17",
-    "commitlint": "^18.6.1",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.19",
+    "commitlint": "^19.2.1",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.1.4",
+    "postcss": "^8.4.38",
     "standard-version": "^9.5.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.4"
   }
 }
