--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
-    "next-sanity": "^8.5.3",
+    "next-sanity": "^9.0.14",
     "next-seo": "^6.5.0",
     "next-themes": "^0.3.0",
     "nextjs-toploader": "^1.6.12",
@@ -66,9 +66,11 @@
     "remark-gfm": "^4.0.0",
     "sanity": "^3.36.4",
     "sass": "^1.74.1",
+    "server-only": "^0.0.1",
     "slugify": "^1.6.6",
     "speakingurl": "^14.0.1",
     "styled-components": "6",
+    "suspend-react": "^0.1.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
