--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/typography": "^0.5.12",
     "@types/react": "^18.2.74",
     "@types/speakingurl": "^13.0.6",
+    "@vercel/analytics": "^1.2.2",
     "ai": "^3.0.19",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
