--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       "incremental": true,
       "esModuleInterop": true,
       "module": "esnext",
-      "moduleResolution": "node",
+      "moduleResolution": "Bundler",
       "resolveJsonModule": true,
       "isolatedModules": true,
       "jsx": "preserve",
@@ -18,6 +18,7 @@
       "paths": {
           "@*": ["./*"],
           "@/*": ["src/*"],
+          "~sanity/*": ["sanity/*"],
           "@components/*": ["src/components/*"],
           "@app/*": ["src/app/*"]
       },
