--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/mailchimp__mailchimp_marketing": "^3.0.20",
     "@types/node": "^20.12.12",
     "@types/react-syntax-highlighter": "^15.5.13",
