--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,8 @@
  
     "plugins": ["@trivago/prettier-plugin-sort-imports"],
     "importOrder": [
+        "^react$",
+        "^@/(.*)$",
         "^@src/(.*)$",
         "^@sanity/(.*)$",
         "^@components/(.*)$",
