--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
     "jsxBracketSameLine": true,
     "jsxSingleQuote": true,
     "semi": false,
- 
+
     "plugins": ["@trivago/prettier-plugin-sort-imports"],
     "importOrder": [
         "^@/(.*)$",
@@ -14,7 +14,7 @@
         "^@utils/(.*)$",
         "^[./]"
     ],
-    "importOrderSeparation": true,
+    "importOrderSeparation": false,
     "importOrderSortSpecifiers": true,
     "importOrderByLength": true
 }
