--- a/.prettierrc
+++ b/.prettierrc
@@ -7,6 +7,9 @@
 
     "plugins": ["@trivago/prettier-plugin-sort-imports"],
     "importOrder": [
+        "^react$",
+        "^next",
+        "^next-sanity",
         "^@/(.*)$",
         "^@src/(.*)$",
         "^@sanity/(.*)$",
@@ -15,6 +18,6 @@
         "^[./]"
     ],
     "importOrderSeparation": false,
-    "importOrderSortSpecifiers": true,
-    "importOrderByLength": true
+    "importOrderSortSpecifiers": false,
+    "importOrderByLength": false
 }
