--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.3",
     "@fontsource-variable/bricolage-grotesque": "^5.0.6",
     "@fontsource-variable/lora": "^5.0.18",
     "@fontsource/inter": "^5.0.18",
@@ -81,6 +82,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@clerk/types": "^4.6.1",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
