--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "sanity": "^3.43.0",
         "sanity-plugin-asset-source-unsplash": "^3.0.1",
         "sanity-plugin-iframe-pane": "^3.1.6",
+        "sanity-plugin-vercel-deploy": "^3.3.4",
         "sass": "^1.77.2",
         "server-only": "^0.0.1",
         "slugify": "^1.6.6",
