--- a/package.json
+++ b/package.json
@@ -11,53 +11,54 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "@clerk/nextjs": "^5.2.3",
-        "@fontsource-variable/bricolage-grotesque": "^5.0.6",
+        "@ai-sdk/openai": "^0.0.43",
+        "@clerk/nextjs": "^5.2.14",
+        "@fontsource-variable/bricolage-grotesque": "^5.0.7",
         "@fontsource-variable/lora": "^5.0.18",
-        "@fontsource/inter": "^5.0.18",
-        "@huggingface/inference": "^2.7.0",
+        "@fontsource/inter": "^5.0.20",
+        "@huggingface/inference": "^2.8.0",
         "@mailchimp/mailchimp_marketing": "^3.0.80",
-        "@portabletext/react": "^3.0.18",
-        "@prisma/client": "5.14.0",
-        "@radix-ui/react-avatar": "^1.0.4",
-        "@radix-ui/react-dialog": "^1.0.5",
-        "@radix-ui/react-hover-card": "^1.0.7",
-        "@radix-ui/react-separator": "^1.0.3",
-        "@radix-ui/react-slot": "^1.0.2",
+        "@portabletext/react": "^3.1.0",
+        "@prisma/client": "5.18.0",
+        "@radix-ui/react-avatar": "^1.1.0",
+        "@radix-ui/react-dialog": "^1.1.1",
+        "@radix-ui/react-hover-card": "^1.1.1",
+        "@radix-ui/react-separator": "^1.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
-        "@radix-ui/react-toggle": "^1.0.3",
+        "@radix-ui/react-toggle": "^1.1.0",
         "@sanity/asset-utils": "^1.3.0",
         "@sanity/code-input": "^4.1.4",
-        "@sanity/icons": "^2.11.8",
+        "@sanity/icons": "^3.3.1",
         "@sanity/image-url": "^1.0.2",
-        "@sanity/preview-url-secret": "^1.6.13",
+        "@sanity/preview-url-secret": "^1.6.19",
         "@sanity/table": "^1.1.2",
-        "@sanity/ui": "^2.1.12",
+        "@sanity/ui": "^2.8.8",
         "@sanity/vision": "3",
-        "@t3-oss/env-nextjs": "^0.10.1",
+        "@t3-oss/env-nextjs": "^0.11.0",
         "@tailwindcss/container-queries": "^0.1.1",
-        "@tailwindcss/typography": "^0.5.13",
+        "@tailwindcss/typography": "^0.5.14",
         "@types/react": "^18.3.3",
         "@types/speakingurl": "^13.0.6",
         "@vercel/analytics": "^1.3.1",
-        "ai": "^3.1.14",
-        "axios": "^1.7.2",
+        "ai": "^3.3.3",
+        "axios": "^1.7.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "date-fns": "^3.6.0",
-        "framer-motion": "^11.2.6",
+        "framer-motion": "^11.3.23",
         "gray-matter": "^4.0.3",
         "hamburger-react": "^2.5.1",
         "js-cookie": "^3.0.5",
-        "lucide-react": "^0.379.0",
-        "next": "14.2.3",
-        "next-sanity": "^9.3.0",
+        "lucide-react": "^0.424.0",
+        "next": "14.2.5",
+        "next-sanity": "^9.4.4",
         "next-seo": "^6.5.0",
         "next-themes": "^0.3.0",
         "nextjs-toploader": "^1.6.12",
-        "openai": "^4.47.1",
+        "openai": "^4.55.1",
         "plaiceholder": "^3.0.0",
-        "prisma": "^5.14.0",
+        "prisma": "^5.18.0",
         "promise": "^8.3.0",
         "react": "18.3.1",
         "react-cool-dimensions": "^3.0.1",
@@ -69,38 +70,38 @@
         "react-syntax-highlighter": "^15.5.0",
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^4.0.0",
-        "sanity": "^3.43.0",
+        "sanity": "^3.53.0",
         "sanity-plugin-asset-source-unsplash": "^3.0.1",
         "sanity-plugin-iframe-pane": "^3.1.6",
         "sanity-plugin-vercel-deploy": "^3.3.4",
-        "sass": "^1.77.2",
+        "sass": "^1.77.8",
         "server-only": "^0.0.1",
         "slugify": "^1.6.6",
         "speakingurl": "^14.0.1",
         "styled-components": "6",
         "suspend-react": "^0.1.3",
-        "tailwind-merge": "^2.3.0",
+        "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
-        "use-debounce": "^10.0.0",
+        "use-debounce": "^10.0.2",
         "zod": "^3.23.8"
     },
     "devDependencies": {
-        "@clerk/types": "^4.6.1",
-        "@commitlint/cli": "^19.3.0",
+        "@clerk/types": "^4.12.1",
+        "@commitlint/cli": "^19.4.0",
         "@commitlint/config-conventional": "^19.2.2",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/js-cookie": "^3.0.6",
         "@types/mailchimp__mailchimp_marketing": "^3.0.20",
-        "@types/node": "^20.12.12",
+        "@types/node": "^22.1.0",
         "@types/react-syntax-highlighter": "^15.5.13",
-        "autoprefixer": "^10.4.19",
-        "commitlint": "^19.3.0",
+        "autoprefixer": "^10.4.20",
+        "commitlint": "^19.4.0",
         "eslint": "8.57.0",
-        "eslint-config-next": "14.2.3",
-        "husky": "^9.0.11",
-        "postcss": "^8.4.38",
+        "eslint-config-next": "14.2.5",
+        "husky": "^9.1.4",
+        "postcss": "^8.4.41",
         "standard-version": "^9.5.0",
-        "tailwindcss": "^3.4.3",
-        "typescript": "^5.4.5"
+        "tailwindcss": "^3.4.8",
+        "typescript": "^5.5.4"
     }
 }
