--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@types/speakingurl": "^13.0.6",
         "@vercel/analytics": "^1.3.1",
         "@vercel/kv": "^2.0.0",
+        "@vercel/speed-insights": "^1.0.12",
         "ai": "^3.3.3",
         "axios": "^1.7.3",
         "class-variance-authority": "^0.7.0",
