--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "@prisma/client": "5.18.0",
         "@radix-ui/react-avatar": "^1.1.0",
         "@radix-ui/react-dialog": "^1.1.1",
+        "@radix-ui/react-dropdown-menu": "^2.1.1",
         "@radix-ui/react-hover-card": "^1.1.1",
+        "@radix-ui/react-select": "^2.1.1",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
@@ -47,6 +49,7 @@
         "axios": "^1.7.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
+        "codemirror-lang-r": "0.1.0-2",
         "date-fns": "^3.6.0",
         "framer-motion": "^11.3.23",
         "gray-matter": "^4.0.3",
@@ -62,6 +65,7 @@
         "plaiceholder": "^3.0.0",
         "prisma": "^5.18.0",
         "promise": "^8.3.0",
+        "query-string": "^9.1.0",
         "react": "18.3.1",
         "react-cool-dimensions": "^3.0.1",
         "react-dom": "18.3.1",
@@ -70,8 +74,10 @@
         "react-markdown": "^9.0.1",
         "react-player": "^2.16.0",
         "react-syntax-highlighter": "^15.5.0",
+        "recharts": "^2.12.7",
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^4.0.0",
+        "resend": "^4.0.0",
         "sanity": "^3.53.0",
         "sanity-plugin-asset-source-unsplash": "^3.0.1",
         "sanity-plugin-iframe-pane": "^3.1.6",
@@ -85,6 +91,7 @@
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
         "use-debounce": "^10.0.2",
+        "usehooks-ts": "^3.1.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
