--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@t3-oss/env-nextjs": "^0.11.0",
         "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/typography": "^0.5.14",
+        "@tanstack/react-query": "^5.59.0",
         "@types/react": "^18.3.3",
         "@types/speakingurl": "^13.0.6",
         "@vercel/analytics": "^1.3.1",
@@ -55,7 +56,7 @@
         "gray-matter": "^4.0.3",
         "hamburger-react": "^2.5.1",
         "js-cookie": "^3.0.5",
-        "lucide-react": "^0.424.0",
+        "lucide-react": "^0.447.0",
         "next": "14.2.5",
         "next-sanity": "^9.4.4",
         "next-seo": "^6.5.0",
@@ -98,6 +99,8 @@
         "@clerk/types": "^4.12.1",
         "@commitlint/cli": "^19.4.0",
         "@commitlint/config-conventional": "^19.2.2",
+        "@tanstack/eslint-plugin-query": "^5.59.1",
+        "@tanstack/react-query-devtools": "^5.59.0",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/js-cookie": "^3.0.6",
         "@types/mailchimp__mailchimp_marketing": "^3.0.20",
