--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
         "@types/js-cookie": "^3.0.6",
         "@types/mailchimp__mailchimp_marketing": "^3.0.20",
         "@types/node": "^22.1.0",
+        "@types/react-dom": "^18.3.0",
         "@types/react-syntax-highlighter": "^15.5.13",
         "autoprefixer": "^10.4.20",
         "commitlint": "^19.4.0",
