--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
         "@sanity/preview-url-secret": "^1.6.19",
         "@sanity/table": "^1.1.2",
         "@sanity/ui": "^2.8.8",
-        "@sanity/vision": "3",
+        "@sanity/vision": "^3.29.1",
         "@t3-oss/env-nextjs": "^0.11.0",
         "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/typography": "^0.5.14",
@@ -88,7 +88,7 @@
         "server-only": "^0.0.1",
         "slugify": "^1.6.6",
         "speakingurl": "^14.0.1",
-        "styled-components": "6",
+        "styled-components": "^6.1.8",
         "suspend-react": "^0.1.3",
         "tailwind-merge": "^2.4.0",
         "tailwindcss-animate": "^1.0.7",
@@ -117,5 +117,6 @@
         "standard-version": "^9.5.0",
         "tailwindcss": "^3.4.8",
         "typescript": "^5.5.4"
-    }
+    },
+    "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
