--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "@ai-sdk/google": "^1.2.5",
         "@ai-sdk/openai": "^0.0.43",
+        "@ai-sdk/react": "^1.2.5",
         "@clerk/nextjs": "^5.2.14",
         "@fontsource-variable/bricolage-grotesque": "^5.0.7",
         "@fontsource-variable/lora": "^5.0.18",
@@ -43,10 +45,11 @@
         "@tanstack/react-query": "^5.59.0",
         "@types/react": "^18.3.3",
         "@types/speakingurl": "^13.0.6",
+        "@upstash/redis": "^1.34.6",
         "@vercel/analytics": "^1.3.1",
         "@vercel/kv": "^2.0.0",
         "@vercel/speed-insights": "^1.0.12",
-        "ai": "^3.3.3",
+        "ai": "^4.2.10",
         "axios": "^1.7.3",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
