--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
         "styled-components": "^6.1.17",
         "superjson": "^2.2.2",
         "suspend-react": "^0.1.3",
+        "tailwind": "^3.1.0",
         "tailwind-merge": "^3.2.0",
         "tailwindcss-animate": "^1.0.7",
         "use-debounce": "^10.0.4",
