--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
         "@sanity/vision": "^3.86.1",
         "@t3-oss/env-nextjs": "^0.13.0",
         "@tailwindcss/container-queries": "^0.1.1",
-        "@tailwindcss/postcss": "^4.1.4",
         "@tailwindcss/typography": "^0.5.16",
         "@tanstack/react-query": "^5.74.4",
         "@trpc/client": "^11.1.1",
@@ -102,7 +101,6 @@
         "superjson": "^2.2.2",
         "suspend-react": "^0.1.3",
         "tailwind-merge": "^3.2.0",
-        "tailwindcss-animate": "^1.0.7",
         "use-debounce": "^10.0.4",
         "usehooks-ts": "^3.1.1",
         "vaul": "^1.1.2",
@@ -112,6 +110,7 @@
         "@clerk/types": "^4.55.1",
         "@commitlint/cli": "^19.8.0",
         "@commitlint/config-conventional": "^19.8.0",
+        "@tailwindcss/postcss": "^4.1.4",
         "@tanstack/eslint-plugin-query": "^5.73.3",
         "@tanstack/react-query-devtools": "^5.74.6",
         "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -120,7 +119,6 @@
         "@types/node": "^22.14.1",
         "@types/react-dom": "^19.1.2",
         "@types/react-syntax-highlighter": "^15.5.13",
-        "autoprefixer": "^10.4.21",
         "commitlint": "^19.8.0",
         "eslint": "9.25.1",
         "eslint-config-next": "15.3.1",
@@ -128,7 +126,8 @@
         "postcss": "^8.5.3",
         "prisma": "^6.6.0",
         "standard-version": "^9.5.0",
-        "tailwindcss": "^3.4.17",
+        "tailwindcss": "^4.1.4",
+        "tw-animate-css": "^1.2.8",
         "typescript": "^5.8.3"
     },
     "packageManager": "pnpm@10.9.0"
