--- a/components.json
+++ b/components.json
@@ -4,13 +4,16 @@
     "rsc": true,
     "tsx": true,
     "tailwind": {
-        "config": "tailwind.config.ts",
-        "css": "src/scss/global.scss",
+        "config": "",
+        "css": "src/styles/global.css",
         "baseColor": "slate",
         "cssVariables": false
     },
     "aliases": {
         "components": "@/components",
-        "utils": "@/lib/utils"
+        "utils": "@/lib/utils",
+        "ui": "@/components/ui",
+        "lib": "@/lib",
+        "hooks": "@/hooks"
     }
 }
