--- a/components.json
+++ b/components.json
@@ -5,7 +5,7 @@
     "tsx": true,
     "tailwind": {
         "config": "",
-        "css": "src/styles/global.css",
+        "css": "src/app/styles/global.css",
         "baseColor": "slate",
         "cssVariables": false
     },
