--- a/package.json
+++ b/package.json
@@ -12,90 +12,110 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "@ai-sdk/google": "^1.2.13",
-        "@ai-sdk/openai": "^1.3.18",
-        "@ai-sdk/react": "^1.2.9",
-        "@clerk/nextjs": "^6.18.0",
-        "@fontsource-variable/bricolage-grotesque": "^5.2.6",
+        "@ai-sdk/google": "^1.2.14",
+        "@ai-sdk/react": "^1.2.11",
+        "@clerk/nextjs": "^6.18.5",
+        "@fontsource-variable/bricolage-grotesque": "^5.2.7",
         "@fontsource-variable/lora": "^5.2.5",
         "@fontsource/inter": "^5.2.5",
-        "@huggingface/inference": "^3.8.2",
+        "@hookform/resolvers": "^5.0.1",
         "@mailchimp/mailchimp_marketing": "^3.0.80",
         "@portabletext/react": "^3.2.1",
-        "@prisma/client": "6.6.0",
+        "@prisma/client": "6.7.0",
         "@radix-ui/react-accordion": "^1.2.8",
+        "@radix-ui/react-alert-dialog": "^1.1.11",
+        "@radix-ui/react-aspect-ratio": "^1.1.4",
         "@radix-ui/react-avatar": "^1.1.7",
+        "@radix-ui/react-checkbox": "^1.2.3",
+        "@radix-ui/react-collapsible": "^1.1.8",
+        "@radix-ui/react-context-menu": "^2.2.12",
         "@radix-ui/react-dialog": "^1.1.11",
         "@radix-ui/react-dropdown-menu": "^2.1.12",
         "@radix-ui/react-hover-card": "^1.1.11",
+        "@radix-ui/react-label": "^2.1.4",
+        "@radix-ui/react-menubar": "^1.1.12",
+        "@radix-ui/react-navigation-menu": "^1.2.10",
         "@radix-ui/react-popover": "^1.1.11",
+        "@radix-ui/react-progress": "^1.1.4",
+        "@radix-ui/react-radio-group": "^1.3.4",
+        "@radix-ui/react-scroll-area": "^1.2.6",
         "@radix-ui/react-select": "^2.2.2",
         "@radix-ui/react-separator": "^1.1.4",
+        "@radix-ui/react-slider": "^1.3.2",
         "@radix-ui/react-slot": "^1.2.0",
+        "@radix-ui/react-switch": "^1.2.2",
         "@radix-ui/react-tabs": "^1.1.9",
         "@radix-ui/react-toggle": "^1.1.6",
+        "@radix-ui/react-toggle-group": "^1.1.7",
+        "@radix-ui/react-tooltip": "^1.2.4",
         "@sanity/asset-utils": "^2.2.1",
         "@sanity/code-input": "^5.1.2",
         "@sanity/icons": "^3.7.0",
         "@sanity/image-url": "^1.1.0",
-        "@sanity/preview-url-secret": "^2.1.8",
+        "@sanity/preview-url-secret": "^2.1.10",
         "@sanity/table": "^1.1.3",
-        "@sanity/ui": "^2.15.13",
-        "@sanity/vision": "^3.86.1",
-        "@t3-oss/env-nextjs": "^0.13.0",
+        "@sanity/ui": "^2.15.14",
+        "@sanity/vision": "^3.87.1",
+        "@t3-oss/env-nextjs": "^0.13.4",
         "@tailwindcss/container-queries": "^0.1.1",
         "@tailwindcss/typography": "^0.5.16",
-        "@tanstack/react-query": "^5.74.4",
-        "@trpc/client": "^11.1.1",
-        "@trpc/next": "^11.1.1",
-        "@trpc/react-query": "^11.1.1",
-        "@trpc/server": "^11.1.1",
+        "@tanstack/react-query": "^5.75.2",
+        "@tanstack/react-table": "^8.21.3",
+        "@trpc/client": "^11.1.2",
+        "@trpc/next": "^11.1.2",
+        "@trpc/react-query": "^11.1.2",
+        "@trpc/server": "^11.1.2",
         "@types/react": "^19.1.2",
         "@types/speakingurl": "^13.0.6",
         "@upstash/redis": "^1.34.8",
         "@vercel/analytics": "^1.5.0",
         "@vercel/kv": "^3.0.0",
         "@vercel/speed-insights": "^1.2.0",
-        "ai": "^4.3.9",
-        "axios": "^1.8.4",
+        "ai": "^4.3.13",
+        "axios": "^1.9.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "codemirror-lang-r": "0.1.1",
         "date-fns": "^4.1.0",
-        "framer-motion": "^12.8.2",
+        "embla-carousel-react": "^8.6.0",
+        "framer-motion": "^12.9.4",
         "gray-matter": "^4.0.3",
         "hamburger-react": "^2.5.2",
+        "input-otp": "^1.4.2",
         "js-cookie": "^3.0.5",
-        "lucide-react": "^0.503.0",
+        "lucide-react": "^0.507.0",
         "next": "15.3.1",
-        "next-sanity": "^9.10.2",
+        "next-sanity": "^9.10.6",
         "next-seo": "^6.6.0",
         "next-themes": "^0.4.6",
         "nextjs-toploader": "^3.8.16",
         "plaiceholder": "^3.0.0",
-        "posthog-js": "^1.236.5",
+        "posthog-js": "^1.239.1",
         "promise": "^8.3.0",
-        "query-string": "^9.1.1",
-        "react": "19.1.0",
+        "query-string": "^9.1.2",
+        "react": "18.3.1",
         "react-cool-dimensions": "^3.0.1",
-        "react-dom": "19.1.0",
-        "react-error-boundary": "^5.0.0",
+        "react-day-picker": "9.6.7",
+        "react-dom": "18.3.1",
+        "react-error-boundary": "^6.0.0",
+        "react-hook-form": "^7.56.2",
         "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
         "react-player": "^2.16.0",
+        "react-resizable-panels": "^3.0.1",
         "react-syntax-highlighter": "^15.6.1",
         "recharts": "^2.15.3",
         "rehype-raw": "^7.0.0",
         "remark-gfm": "^4.0.1",
-        "resend": "^4.4.0",
-        "sanity": "^3.86.1",
+        "resend": "^4.5.0",
+        "sanity": "^3.87.1",
         "sanity-plugin-asset-source-unsplash": "^3.0.3",
         "sanity-plugin-iframe-pane": "^3.2.1",
         "sanity-plugin-vercel-deploy": "^3.3.4",
-        "sass": "^1.87.0",
         "server-only": "^0.0.1",
         "slugify": "^1.6.6",
+        "sonner": "^2.0.3",
         "speakingurl": "^14.0.1",
         "styled-components": "^6.1.17",
         "superjson": "^2.2.2",
@@ -104,31 +124,32 @@
         "use-debounce": "^10.0.4",
         "usehooks-ts": "^3.1.1",
         "vaul": "^1.1.2",
-        "zod": "^3.24.3"
+        "zod": "^3.24.3",
+        "zod-prisma": "^0.5.4"
     },
     "devDependencies": {
-        "@clerk/types": "^4.55.1",
+        "@clerk/types": "^4.56.3",
         "@commitlint/cli": "^19.8.0",
         "@commitlint/config-conventional": "^19.8.0",
-        "@tailwindcss/postcss": "^4.1.4",
-        "@tanstack/eslint-plugin-query": "^5.73.3",
-        "@tanstack/react-query-devtools": "^5.74.6",
-        "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+        "@tailwindcss/postcss": "^4.1.5",
+        "@tanstack/eslint-plugin-query": "^5.74.7",
+        "@tanstack/react-query-devtools": "^5.75.2",
         "@types/js-cookie": "^3.0.6",
         "@types/mailchimp__mailchimp_marketing": "^3.0.21",
-        "@types/node": "^22.14.1",
-        "@types/react-dom": "^19.1.2",
+        "@types/node": "^22.15.3",
+        "@types/react-dom": "^19.1.3",
         "@types/react-syntax-highlighter": "^15.5.13",
         "commitlint": "^19.8.0",
-        "eslint": "9.25.1",
+        "eslint": "9.26.0",
         "eslint-config-next": "15.3.1",
         "husky": "^9.1.7",
         "postcss": "^8.5.3",
-        "prisma": "^6.6.0",
+        "prettier": "^3.5.3",
+        "prisma": "^6.7.0",
         "standard-version": "^9.5.0",
-        "tailwindcss": "^4.1.4",
-        "tw-animate-css": "^1.2.8",
+        "tailwindcss": "^4.1.5",
+        "tw-animate-css": "^1.2.9",
         "typescript": "^5.8.3"
     },
-    "packageManager": "pnpm@10.9.0"
+    "packageManager": "pnpm@10.10.0"
 }
